tests/ui/traits/dyn-iterator-deref-in-for-loop.current.stderr
error[E0277]: `dyn Iterator<Item = &'a mut u8>` is not an iterator
  --> $DIR/dyn-iterator-deref-in-for-loop.rs:9:17
   |
LL |     for item in *things {
   |                 ^^^^^^^ the trait `Sized` is not implemented for `dyn Iterator<Item = &'a mut u8>`
   |
   = note: the trait bound `Sized` is not satisfied
   = note: required for `dyn Iterator<Item = &'a mut u8>` to implement `IntoIterator`
help: consider mutably borrowing here
   |
LL |     for item in &mut *things {
   |                 ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
